[gd_scene load_steps=2 format=3 uid="uid://cka2mmisi0xoa"]

[ext_resource type="Script" path="res://scripts/components/Handles.gd" id="1_4c0dp"]

[node name="Resizing" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_4c0dp")

[node name="Right" type="Control" parent="."]
custom_minimum_size = Vector2(5, 5)
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2
mouse_default_cursor_shape = 10

[node name="Bottom" type="Control" parent="."]
custom_minimum_size = Vector2(5, 5)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
mouse_default_cursor_shape = 9

[node name="Corner" type="Control" parent="."]
custom_minimum_size = Vector2(5, 5)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -5.0
offset_top = -5.0
grow_horizontal = 0
grow_vertical = 0
mouse_default_cursor_shape = 12

[connection signal="gui_input" from="Right" to="." method="_on_right_gui_input"]
[connection signal="gui_input" from="Bottom" to="." method="_on_bottom_gui_input"]
[connection signal="gui_input" from="Corner" to="." method="_on_corner_gui_input"]
